--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "autoprefixer": "^10.4.13",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.6"
   },
   "devDependencies": {
