--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "autoprefixer": "^10.4.13",
-    "flowbite": "^1.6.5",
-    "flowbite-react": "^0.4.4",
-    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "daisyui": "^2.51.6",
+    "init": "^0.1.2",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -23,10 +26,21 @@
     "tailwindcss": "^3.2.6"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.10",
+    "@storybook/addon-interactions": "^7.0.10",
+    "@storybook/addon-links": "^7.0.10",
+    "@storybook/addon-styling": "^1.0.6",
+    "@storybook/blocks": "^7.0.10",
+    "@storybook/builder-vite": "^7.0.10",
+    "@storybook/react": "^7.0.10",
+    "@storybook/react-vite": "^7.0.10",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "prettier": "2.8.4",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.10",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
