--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.2.6"
+    "tailwindcss": "^3.2.6",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.10",
