--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "init": "^0.1.2",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
