--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-tailwind/react": "^2.1.4",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
-    "daisyui": "^2.51.6",
     "init": "^0.1.2",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "recoil": "^0.7.7",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.6",
     "vite-plugin-svgr": "^3.2.0"
