--- a/package.json
+++ b/package.json
@@ -28,21 +28,20 @@
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.10",
-    "@storybook/addon-interactions": "^7.0.10",
-    "@storybook/addon-links": "^7.0.10",
-    "@storybook/addon-styling": "^1.0.6",
-    "@storybook/blocks": "^7.0.10",
-    "@storybook/builder-vite": "^7.0.10",
-    "@storybook/react": "^7.0.10",
-    "@storybook/react-vite": "^7.0.10",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/addon-essentials": "^7.6.5",
+    "@storybook/addon-interactions": "^7.6.5",
+    "@storybook/addon-links": "^7.6.5",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.5",
+    "@storybook/react": "^7.6.5",
+    "@storybook/react-vite": "^7.6.5",
+    "@storybook/test": "^7.6.5",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "prettier": "2.8.4",
     "prop-types": "^15.8.1",
-    "storybook": "^7.0.10",
+    "storybook": "^7.6.5",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
