--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.22.1",
     "recoil": "^0.7.7",
+    "storybook-addon-react-router-v6": "^2.0.11",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.6",
     "vite-plugin-svgr": "^3.2.0"
